--- a/Blog.html
+++ b/Blog.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="blog.css" />
+    <link rel="stylesheet" href="Blog.css" />
     <title>Web Design Mastery | Resume</title>
 </head>
 <body>
